--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,15 +2,17 @@
 
 <% content_for :title, "Books" %>
 
-<h1>Books</h1>
+<h1>Books Collection</h1>
 
 <div id="books">
   <% @books.each do |book| %>
     <%= render book %>
     <p>
-      <%= link_to "Show this book", book %>
+      <%= link_to "Show", book %> |
+      <%= link_to "Edit", edit_book_path(book) %> |
+      <%= link_to "Delete", delete_book_path(book) %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New book", new_book_path %>
+<%= link_to "Add New book", new_book_path %>
