Fixing based on Canvas rubric and analysis by LLM

--- a/app/views/books/delete.html.erb
+++ b/app/views/books/delete.html.erb
@@ -11,4 +11,4 @@
   <%= submit_tag "Delete Book" %>
 <% end %>
 
-<%= link_to "Back to Home", books_path %>
+<%= link_to "Back to books", books_path %>
