--- a/app/views/books/delete.html.erb
+++ b/app/views/books/delete.html.erb
@@ -7,6 +7,21 @@
   <%= @book.title %>
 </p>
 
+<p>
+  <strong>Author:</strong>
+  <%= @book.author %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  $<%= number_with_precision(@book.price, precision: 2) %>
+</p>
+
+<p>
+  <strong>Published Date:</strong>
+  <%= @book.published_date %>
+</p>
+
 <%= form_with model: @book, method: :delete do %>
   <%= submit_tag "Delete Book" %>
 <% end %>
