--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,26 @@
 
 <div id="books">
   <% @books.each do |book| %>
-    <%= render book %>
+    <p>
+      <strong>Title:</strong>
+      <%= book.title %>
+    </p>
+
+    <p>
+      <strong>Author:</strong>
+      <%= book.author %>
+    </p>
+
+    <p>
+      <strong>Price:</strong>
+      $<%= number_with_precision(book.price, precision: 2) %>
+    </p>
+
+    <p>
+      <strong>Published Date:</strong>
+      <%= book.published_date %>
+    </p>
+
     <p>
       <%= link_to "Show", book %> |
       <%= link_to "Edit", edit_book_path(book) %> |
