--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,26 @@
 
 <h1>Book Details</h1>
 
-<%= render @book %>
+<p>
+  <strong>Title:</strong>
+  <%= @book.title %>
+</p>
+
+<p>
+  <strong>Author:</strong>
+  <%= @book.author %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  $<%= number_with_precision(@book.price, precision: 2) %>
+</p>
+
+<p>
+  <strong>Published Date:</strong>
+  <%= @book.published_date %>
+</p>
+
 
 <div>
   <%= link_to "Edit this book", edit_book_path(@book) %> |
